<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>

    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_login">Log in</string>
    <string name="fragment_login_signup">Sign up</string>
    <string name="fragment_login_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="fragment_login_terms_and_conditions_text">By joining you agree to our</string>
    <string name="fragment_login_empty_email_error_message">Email is empty!</string>
    <string name="fragment_login_empty_password_error_message">Password is empty!</string>
    <string name="fragment_login_invalid_email_error_message">Email is invalid!</string>
    <string name="login_failed_message">Email or Password is incorrect.</string>
    <string name="no_internet_conection_message">There is no internet connection</string>
    <string name="tab_news">News</string>
    <string name="tab_profile">Profile</string>
    <string name="wolox">Wolox</string>
    <string name="image_transition_name">ImageTransition</string>
    <string name="fragment_profile_logout">LogOut</string>
    <string name="fragment_profile_username_title">Username</string>
    <string name="fragment_profile_useremail_title">UserEmail</string>
    <string name="tab_search">Search</string>
    <string name="fragment_youtube_search_text">Search</string>
    <string name="fragment_youtube_search_hint">YouTube Search</string>

</resources>